# oit_gnss_ros2

./: .gitignore  README.md  dependencies.repos
docs/: architecture.md  driver_compatibility.md  hardware_validation.md
oit_gnss_bringup/: CMakeLists.txt  package.xml
oit_gnss_bringup/config/: quality.yaml
oit_gnss_bringup/config/profiles/: f9p_ichimill.yaml  f9p_standalone.yaml
oit_gnss_bringup/launch/: bringup.launch.py  gnss_only.launch.py  profile_loader.py  record.launch.py
oit_gnss_bringup/scripts/: validate_required_topics.py
oit_gnss_monitor/: CMakeLists.txt  package.xml
oit_gnss_monitor/include/oit_gnss_monitor/: fix_quality.hpp
oit_gnss_monitor/src/: fix_quality.cpp  fix_quality_monitor.cpp
oit_gnss_monitor/test/: test_fix_quality.cpp
patches/: ublox-3.0.0-f9p-rxmrawx.patch
scripts/: apply_ublox_f9p_patch.sh
