cmake_minimum_required(VERSION 3.8)
project(oit_gnss_monitor)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-Wall -Wextra -Wpedantic)
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_gtest REQUIRED)
find_package(diagnostic_updater REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
add_library(fix_quality src/fix_quality.cpp)
target_include_directories(fix_quality PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
ament_target_dependencies(fix_quality sensor_msgs)
add_executable(fix_quality_monitor src/fix_quality_monitor.cpp)
target_link_libraries(fix_quality_monitor fix_quality)
ament_target_dependencies(fix_quality_monitor diagnostic_updater rclcpp sensor_msgs)
install(
  TARGETS fix_quality
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
install(TARGETS fix_quality_monitor DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
if(BUILD_TESTING)
  ament_add_gtest(test_fix_quality test/test_fix_quality.cpp)
  target_link_libraries(test_fix_quality fix_quality)
  ament_target_dependencies(test_fix_quality sensor_msgs)
endif()
ament_package()
